Added header, main and fixed margins/padding

--- a/index.html
+++ b/index.html
@@ -14,6 +14,36 @@
 
 <body>
 
+    <!--PAGE TITLE-->
+    <header>
+
+        <div class="header-font page-mw text-align-center pt-15">
+            <h1>Meet our team</h1>
+        </div>
+
+    </header>
+
+
+    <!--TEXT-->
+    <main>
+
+        <div class="page-mw pt-30 text-font text-align-center">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis est voluptatum hic architecto voluptas, cum, dolor accusamus tempora laudantium, facilis laboriosam recusandae enim totam beatae rerum? Animi sapiente tempore consectetur!</p>
+        </div>
+
+
+
+    </main>
+
+
+    <!--CONTACTS-->
+    <section>
+
+
+
+
+    </section>
+
     
 </body>
 </html>
