First postcard added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--PAGE TITLE-->
     <header>
 
-        <div class="header-font page-mw text-align-center pt-15">
+        <div class="header-font page-mw text-align-center pt-15 text-header">
             <h1>Meet our team</h1>
         </div>
 
@@ -27,7 +27,7 @@
     <!--TEXT-->
     <main>
 
-        <div class="page-mw pt-30 text-font text-align-center">
+        <div class="page-mw pt-25 text-font text-align-center">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis est voluptatum hic architecto voluptas, cum, dolor accusamus tempora laudantium, facilis laboriosam recusandae enim totam beatae rerum? Animi sapiente tempore consectetur!</p>
         </div>
 
@@ -38,6 +38,27 @@
 
     <!--CONTACTS-->
     <section>
+
+        <div class="page-mw pt-25">
+            <div class="card-flex flex-space-between">
+
+                <!--POSTCARD-->
+                <div class="bg-black card-right-padding postcard-shadow"> 
+                    <img src="./img/male1.png" alt="Man photo" width="80">
+                    <div class="inline-b text-align-left text-padding text-color">
+                        <h3 class="name-postcard">MARCO BIANCHI</h3>
+                        <p>Designer</p>
+                        <p><span style="color:rgb(96, 193, 218)">marcobianchi@team.com</span></p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+
+        </div>
 
 
 
