--- a/index.html
+++ b/index.html
@@ -45,10 +45,28 @@
                 <!--POSTCARD-->
                 <div class="bg-black card-right-padding postcard-shadow"> 
                     <img src="./img/male1.png" alt="Man photo" width="80">
-                    <div class="inline-b text-align-left text-padding text-color">
+                    <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">MARCO BIANCHI</h3>
                         <p>Designer</p>
                         <p><span style="color:rgb(96, 193, 218)">marcobianchi@team.com</span></p>
+                    </div>
+                </div>
+
+                <div class="bg-black card-right-padding postcard-shadow"> 
+                    <img src="./img/female1.png" alt="Woman Photo" width="80">
+                    <div class="inline-b text-align-left text-color">
+                        <h3 class="name-postcard">LAURA ROSSI</h3>
+                        <p>Front-end Developer</p>
+                        <p><span style="color:rgb(96, 193, 218)">laurarossi@team.com</span></p>
+                    </div>
+                </div>
+
+                <div class="bg-black card-right-padding postcard-shadow"> 
+                    <img src="./img/male2.png" alt="Man Photo" width="80">
+                    <div class="inline-b text-align-left text-padding text-color">
+                        <h3 class="name-postcard">GIORGIO VERDI</h3>
+                        <p>Back-end Developer</p>
+                        <p><span style="color:rgb(96, 193, 218)">giorgioverdi@team.com</span></p>
                     </div>
                 </div>
 
