--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <section>
 
         <div class="page-mw pt-25">
-            <div class="card-flex flex-space-between">
+            <div class="container-flex flex-space-between gap">
 
-                <!--POSTCARD-->
-                <div class="bg-black card-right-padding postcard-shadow"> 
+                <!--POSTCARD 1-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
                     <img src="./img/male1.png" alt="Man photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">MARCO BIANCHI</h3>
@@ -52,7 +52,8 @@
                     </div>
                 </div>
 
-                <div class="bg-black card-right-padding postcard-shadow"> 
+                <!--POSTCARD 2-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
                     <img src="./img/female1.png" alt="Woman Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">LAURA ROSSI</h3>
@@ -61,12 +62,44 @@
                     </div>
                 </div>
 
-                <div class="bg-black card-right-padding postcard-shadow"> 
+                <!--POSTCARD 3-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
                     <img src="./img/male2.png" alt="Man Photo" width="80">
-                    <div class="inline-b text-align-left text-padding text-color">
+                    <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">GIORGIO VERDI</h3>
                         <p>Back-end Developer</p>
                         <p><span style="color:rgb(96, 193, 218)">giorgioverdi@team.com</span></p>
+                    </div>
+                </div>
+
+
+                <!--POSTCARD 4-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
+                    <img src="./img/female2.png" alt="Woman Photo" width="80">
+                    <div class="inline-b text-align-left text-color">
+                        <h3 class="name-postcard">MARTA IPSUM</h3>
+                        <p>SEO Specialist</p>
+                        <p><span style="color:rgb(96, 193, 218)">martaipsum@team.com</span></p>
+                    </div>
+                </div>
+
+                <!--POSTCARD 5-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
+                    <img src="./img/male3.png" alt="Man Photo" width="80">
+                    <div class="inline-b text-align-left text-color">
+                        <h3 class="name-postcard">ROBERTO LOREM</h3>
+                        <p>Project Manager</p>
+                        <p><span style="color:rgb(96, 193, 218)">robertolorem@team.com</span></p>
+                    </div>
+                </div>
+
+                <!--POSTCARD 6-->
+                <div class="bg-black postcard-shadow card-width card-flex"> 
+                    <img src="./img/female3.png" alt="Woman Photo" width="80">
+                    <div class="inline-b text-align-left text-color">
+                        <h3 class="name-postcard">DANIELA AMET</h3>
+                        <p>Analyst</p>
+                        <p><span style="color:rgb(96, 193, 218)">danielaamet@team.com</span></p>
                     </div>
                 </div>
 
