--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container-flex flex-space-between gap">
 
                 <!--POSTCARD 1-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male1.png" alt="Man photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">MARCO BIANCHI</h3>
@@ -53,7 +53,7 @@
                 </div>
 
                 <!--POSTCARD 2-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female1.png" alt="Woman Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">LAURA ROSSI</h3>
@@ -63,7 +63,7 @@
                 </div>
 
                 <!--POSTCARD 3-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male2.png" alt="Man Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">GIORGIO VERDI</h3>
@@ -74,7 +74,7 @@
 
 
                 <!--POSTCARD 4-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female2.png" alt="Woman Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">MARTA IPSUM</h3>
@@ -84,7 +84,7 @@
                 </div>
 
                 <!--POSTCARD 5-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male3.png" alt="Man Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">ROBERTO LOREM</h3>
@@ -94,7 +94,7 @@
                 </div>
 
                 <!--POSTCARD 6-->
-                <div class="bg-black postcard-shadow card-width card-flex"> 
+                <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female3.png" alt="Woman Photo" width="80">
                     <div class="inline-b text-align-left text-color">
                         <h3 class="name-postcard">DANIELA AMET</h3>
