Deleted inline-block class

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!--POSTCARD 1-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male1.png" alt="Man photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">MARCO BIANCHI</h3>
                         <p>Designer</p>
                         <p><span style="color:rgb(96, 193, 218)">marcobianchi@team.com</span></p>
@@ -55,7 +55,7 @@
                 <!--POSTCARD 2-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female1.png" alt="Woman Photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">LAURA ROSSI</h3>
                         <p>Front-end Developer</p>
                         <p><span style="color:rgb(96, 193, 218)">laurarossi@team.com</span></p>
@@ -65,7 +65,7 @@
                 <!--POSTCARD 3-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male2.png" alt="Man Photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">GIORGIO VERDI</h3>
                         <p>Back-end Developer</p>
                         <p><span style="color:rgb(96, 193, 218)">giorgioverdi@team.com</span></p>
@@ -76,7 +76,7 @@
                 <!--POSTCARD 4-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female2.png" alt="Woman Photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">MARTA IPSUM</h3>
                         <p>SEO Specialist</p>
                         <p><span style="color:rgb(96, 193, 218)">martaipsum@team.com</span></p>
@@ -86,7 +86,7 @@
                 <!--POSTCARD 5-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/male3.png" alt="Man Photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">ROBERTO LOREM</h3>
                         <p>Project Manager</p>
                         <p><span style="color:rgb(96, 193, 218)">robertolorem@team.com</span></p>
@@ -96,7 +96,7 @@
                 <!--POSTCARD 6-->
                 <div class="bg-black postcard-shadow card-width card-flex card-icons"> 
                     <img src="./img/female3.png" alt="Woman Photo" width="80">
-                    <div class="inline-b text-align-left text-color">
+                    <div class="text-align-left text-color">
                         <h3 class="name-postcard">DANIELA AMET</h3>
                         <p>Analyst</p>
                         <p><span style="color:rgb(96, 193, 218)">danielaamet@team.com</span></p>
